<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityFormContact2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tv_EjercicioControles" />

    <TableLayout
        android:layout_width="353dp"
        android:layout_height="669dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_FormularioContactoTitulo"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:text="@string/tv_FormularioContactoDescrip2"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="24dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="282dp">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios_Pri_Inc" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios_Pri_Com" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios_Sec_Inc" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios_Sec_Com" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Estudios_Otros" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Intereses" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Intereses_Deporte" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Intereses_Musica" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Intereses_Arte" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Intereses_Tecnologia" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="47dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Recibir_Inf_Tit" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_Recibir_Inf_Opc" />

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Guardar" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>